<resources>
    <string name="app_name">YallaGamers</string>
    <string name="api_key">AIzaSyC3RvtdFffw3jR9nqyQ_TNPRNv_PjbmAF8</string>

    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="dialog_btn_no">No</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_title_msg">Information</string>
    <string name="app_DialogInfo">Information</string>
    <string name="currency_code">AED </string>
    <string name="app_DialogYesNoTitle">Question</string>
    <string name="app_DialogLoading">Loading, please wait....</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_categories">Categories</string>
    <string name="title_explore">Explore</string>
    <string name="title_my_account">My Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is explore fragment</string>
    <string name="row_game_title">Call of Duty \nBlack</string>
    <string name="row_game_brand">PS4 Collector\'s</string>
    <string name="row_category_title">Electronic &amp; Teli Communication</string>
    <string name="row_item_brand">Play Station</string>
    <string name="row_item_item_name">Sony Play Station 4 Platinam wireless headset</string>
    <string name="row_item_strike_price">AED 143.50</string>
    <string name="row_item_currency">AED</string>
    <string name="row_item_current_price">125.50</string>
    <string name="layout_search_box_hint">What are you looking for ?</string>
    <string name="layout_offer_corner_title">OFFER CORNER</string>
    <string name="layout_offer_corner_digital_cards">Digital Cards</string>
    <string name="layout_offer_corner_pre_owned">Pre-Owned</string>
    <string name="layout_offer_corner_nvidia_shield">Nvidia Shield</string>
    <string name="layout_fixed_category_title">CATEGORY</string>
    <string name="layout_fixed_category_playstation">PLAYSTATION</string>
    <string name="layout_fixed_category_xbox">XBOX</string>
    <string name="layout_fixed_category_nintendo">NINTENDO</string>
    <string name="layout_fixed_category_accessories">ACCESSORIES</string>
    <string name="layout_collector_s_editions_title">COLLECTOR\'S EDITIONS</string>
    <string name="layout_our_blog_title">OUR BLOG</string>
    <string name="layout_profile_orders">Orders</string>
    <string name="layout_profile_wishlist">Wishlist</string>
    <string name="layout_profile_refer_earn">Refer &amp; Earns</string>
    <string name="layout_profile_check_order_status">Check your order status</string>
    <string name="layout_profile_your_most_loved_profile">Your most loved styles</string>
    <string name="layout_profile_invite_and_earn">Invite friends &amp; earn reward</string>
    <string name="layout_profile_yalla_cash">YallaCash</string>
    <string name="layout_profile_saved_card">Saved Cards</string>
    <string name="layout_profile_address">Address</string>
    <string name="layout_profile_earn_yallachash_as_you">Earn YallaCash as you shop &amp; use them in checkout</string>
    <string name="layout_profile_save_your_card_for">Save your cards for faster checkout</string>
    <string name="layout_profile_save_address_for">Save address for a hassle-free checkout</string>
    <string name="layout_profile_profile_details">Profile Details</string>
    <string name="layout_profile_settings">Settings</string>
    <string name="layout_profile_change_your_profile_details">Change your profile details &amp; password</string>
    <string name="layout_profile_mange_notifications">Manage notifications &amp; app settings</string>
    <string name="layout_profile_faqs">FAQs</string>
    <string name="layout_profile_about_us">ABOUT US</string>
    <string name="layout_profile_term_of_use">TERMS OF USE</string>
    <string name="layout_profile_privacy_policy">PRIVACY POLICY</string>
    <string name="longText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="layout_login_text_login">Login</string>
    <string name="layout_login_email_id">Email ID</string>
    <string name="layout_login_password">Password</string>
    <string name="layout_login_confirm_password">Confirm Password</string>
    <string name="layout_login_forgot">Forgot ?</string>
    <string name="layout_login_login_with">Or login with...</string>
    <string name="layout_login_new_to_yallagamer">New to YallaGamers?</string>
    <string name="layout_login_text_register">Register</string>
    <string name="layout_register_sign_up">Sign up</string>
    <string name="layout_register_register_with">Or, register with email...</string>
    <string name="layout_register_full_name">Full name</string>
    <string name="layout_register_alread_have_account">Already Have An Account? </string>
    <string name="layout_register_first_name">First name</string>
    <string name="layout_register_last_name">Last name</string>
<!--  Live Testing Server credentials-->
    <string name="user_id">augurstest@gmail.com</string>
    <string name="user_password">42jL5H2Q5zbYLsKGkz9E42n973OpoiL6</string>
<!--      Developemnt Server credentials  -->
<!--    <string name="user_id">augurstest@gmail.com</string>-->
<!--    <string name="user_password">f8q5Z3nX3q491nrYU6iIbWHsCC001eSN</string>-->
    <string name="layout_address_first_name">First name</string>
    <string name="layout_address_last_name">Last name</string>
    <string name="layout_address_mobile_no">Mobile No</string>
    <string name="layout_address_email">Email</string>
    <string name="layout_address_address_line1">Address line 1</string>
    <string name="layout_address_address_line2">Address line 2 (Optional)</string>
    <string name="layout_address_zip_code">Zip/Postal code</string>
    <string name="layout_address_city">City</string>
    <string name="layout_address_state">State</string>
    <string name="layout_address_country">Country</string>
    <string name="layout_address_customer_notes">Customer notes</string>
    <string name="layout_address_my_billing_address">My billing address is same from the shipping address</string>
    <string name="layout_address_work">Work</string>
    <string name="layout_address_home">Home</string>
    <string name="layout_address_make_this_my">Make this my default address</string>
    <string name="layout_address_add_address">Add Address</string>
    <string name="layout_address_remove">Remove</string>
    <string name="layout_address_edit">Edit</string>
    <string name="verification_security_code">Verification Security Code</string>
    <string name="otp_instruction">Enter the 4 digit code we sent via sms.</string>
    <string name="not_receive_otp">Did\'t receive otp?</string>
    <string name="resend">Resend</string>
    <string name="verify_now">verify now</string>
    <string name="later">later</string>
    <string name="Confirm">Confirm</string>
    <string name="customerNotes">Customer Notes</string>
    <string name="BankName">Bank Name</string>
    <string name="PayNow">Pay Now</string>
    <string name="shipping_user_details">SHIPPING USER DETAILS</string>
    <string name="write_a_review">Write a review</string>
    <string name="Title">Title</string>
    <string name="move_to_wishlist">Move To Wishlist</string>
    <string name="shopping_bag">SHOPPING BAG</string>
    <string name="shop_now">Shop Now</string>
    <string name="mobile">Mobile:</string>
    <string name="default_address">Default Address</string>
    <string name="order_detail">Order Detail</string>
    <string name="exchange_return_window_closed_on_19_feb">Exchange/Return window closed on 19 Feb</string>
    <string name="search_order_id">Search Order Id</string>
    <string name="start_date"> Start Date</string>
    <string name="end_date">End date</string>
    <string name="username">UserName</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="customer_information">Customer Information</string>
    <string name="todo">TODO</string>
    <string name="WishListErrorMessage">Please Login to Add Products to Wishlist</string>
    <string name="search_address">Search Address</string>
    <string name="SelectCountry">Country</string>
</resources>