<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="ADDRESS"
        android:background="@color/light_pink"
        android:textColor="@color/black"
        android:paddingTop="10dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/layout_address_address_line1"
        android:paddingLeft="15dp"
        android:textSize="15dp"
        android:background="@drawable/bg_edittext_address"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:hint="@string/layout_address_address_line2"
        android:paddingLeft="15dp"
        android:layout_marginHorizontal="10dp"
        android:textSize="15dp"
        android:background="@drawable/bg_edittext_address"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:paddingLeft="15dp"
        android:textSize="15dp"
        android:hint="@string/layout_address_zip_code"
        android:background="@drawable/bg_edittext_address"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:hint="@string/layout_address_city"
            android:paddingLeft="15dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="15dp"
            android:background="@drawable/bg_edittext_address"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:paddingLeft="15dp"
            android:textSize="15dp"
            android:hint="@string/layout_address_state"
            android:background="@drawable/bg_edittext_address"
            />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:paddingLeft="15dp"
        android:textSize="15dp"
        android:hint="@string/layout_address_country"
        android:background="@drawable/bg_edittext_address" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:paddingLeft="15dp"
        android:textSize="15dp"
        android:gravity="start"
        android:padding="10dp"
        android:hint="@string/customerNotes"
        android:background="@drawable/bg_edittext_address" />
</LinearLayout>