<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:fillViewport="true"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingBottom="50dp">
        <include
            layout="@layout/layout_titlebar_add_address"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="200dp"
            android:src="@drawable/banner_image_login_screen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/layout_login_text_login"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:layout_marginLeft="35dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="35dp"
            android:hint="@string/layout_login_email_id"
            android:maxLength="52"
            android:drawablePadding="8dp"
            android:textSize="14dp"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/light_grey"
            android:fontFamily="@font/proxima_nova_regular"
            android:drawableLeft="@drawable/ic_email_icon" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="35dp"
                android:maxLength="32"
                android:hint="@string/layout_login_password"
                android:drawablePadding="8dp"
                android:textSize="14dp"
                android:inputType="textPassword"
                android:textColorHint="@color/light_grey"
                android:fontFamily="@font/proxima_nova_regular"
                android:drawableLeft="@drawable/ic_password" />
            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_login_forgot"
                android:gravity="center"
                android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="#4c989d"
                android:fontFamily="@font/proxima_nova_bold"
                android:layout_alignParentRight="true"
                android:layout_marginRight="45dp"
                android:layout_marginTop="35dp" />

        </RelativeLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#4c989d"
            android:text="@string/layout_login_text_login"
            android:layout_marginHorizontal="35dp"
            android:gravity="center"
            android:textSize="17dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:fontFamily="@font/proxima_nova_bold"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tv_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_order"
            android:textSize="15dp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:textColor="@color/light_grey"
            android:layout_toRightOf="@id/img_order_icon"
            android:text="@string/layout_login_login_with" />


        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_google" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_facebook" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_login_new_to_yallagamer"
                android:textSize="15dp"
                android:fontFamily="@font/proxima_nova_regular"
                android:textColor="#797A79" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_login_text_register"
                android:layout_marginLeft="5dp"
                android:textSize="15dp"
                android:fontFamily="@font/proxima_nova_alt_bold"
                android:id="@+id/registration_click"
                android:textColor="@color/light_green" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>
